Prepare for distribution.

--- a/MemoryGame/Base.lproj/Main.storyboard
+++ b/MemoryGame/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xV7-Hh-tl2">
-                                <rect key="frame" x="104" y="497" width="207" height="59"/>
+                                <rect key="frame" x="103.66666666666669" y="497" width="207" height="59"/>
                                 <color key="backgroundColor" red="1" green="0.40500047839999997" blue="0.2709100391" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="Play">
@@ -37,7 +37,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NPk-fC-qaL">
-                                <rect key="frame" x="104" y="571" width="207" height="59"/>
+                                <rect key="frame" x="103.66666666666669" y="571" width="207" height="59"/>
                                 <color key="backgroundColor" red="1" green="0.40500047839999997" blue="0.2709100391" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="Ranking">
@@ -807,7 +807,7 @@
                                         </connections>
                                     </button>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="5Iq-fg-fOg" userLabel="txfNameInput">
-                                        <rect key="frame" x="44" y="144.66666666666666" width="203" height="38"/>
+                                        <rect key="frame" x="44.333333333333314" y="144.66666666666666" width="202.33333333333337" height="38"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                         <textInputTraits key="textInputTraits"/>
